
[v1.1.2p9b]
 - Bugfix: It is no longer possible to merge two stacks of floating CDockables that have a different working-area
 
[v1.1.2p9c]
 - API: Added "setEnabled" to RootMenuPiece allowing clients to disable the menu
 
[v1.1.2p9d]
 - Bugfix: CGridPerspective did not allow its subclass CWorkingPerspective to configure the delegate early enough
 - API: Overloaded CControlPerspective.setPerspective with a version that allows to store the contents of working areas
 - Bugfix: StackDockStation did fire a focus event when its theme was updated
 
[v1.1.2p10]
 - Bugfix: Thanks to an anonymous user, a memory leak in BasicButtonDockTitle was found and fixed
 
[v1.1.2p10a]
 - Bugfix: ToolbarGroupTitle did ignore the color, and always used the same gray
 - Bugfix: When reading a CPerspective a new instanceof of CommonSingleDockableFactory needed to be registered as backup factory
 
[v1.1.2p10b]
 - Bugfix by Veronique: clicking on a floating Dockable did cause the WindowMover to register a VetoableDockRelocatorListener, but that listener was never unregistered because the mouseReleased-event was already consumed by the mousePressed method.
 
[v1.1.2p10c]
 - API: allow clients access to the nodes of an AbstractSplitDockGrid
 
[v1.1.2p10d]
 - Bugfix: when minimizing a Dockable, focus the most recent Dockable that was focused - instead of the Dockable that was not focused the longest.
 
[v1.1.2p10e]
 - Bugfix: the RectGradientPainter did paint a line that was placed at a bad position
 - Bugfix: made a dirty hackaround of a design flaw in the library that caused ToolbarGroupDockStations to report the wrong preferred size.
 
[v1.1.2p10f]
 - Bugfix: prevent a possible NPE if the SplitDockStation is painted without being attached to a DockController
 
[v1.1.2p10g]
 - Bugfix: ModeManager.getModeHistory now always includes the current mode, even if the dockable was never moved around.
 
[v1.1.2p11]
 - Bugfix: Flat-theme did not properly support the annotation @TabDockAction
 